[gd_scene load_steps=6 format=2]

[ext_resource path="res://systems/world/nodes/characters/player.gd" type="Script" id=1]

[sub_resource type="CylinderShape" id=1]
radius = 0.3
height = 1.78

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.3
bottom_radius = 0.3
height = 1.78

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.5, 0.8, 0.5 )

[sub_resource type="CylinderShape" id=4]
radius = 20.0
height = 50.0

[node name="Player" type="KinematicBody" groups=["StateSync"]]
collision_layer = 4
script = ExtResource( 1 )

[node name="CollisionBody" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.887, 0 )
shape = SubResource( 1 )

[node name="DummyGizmo" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.887, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="InteractionArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.304 )
collision_layer = 0
collision_mask = 30
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="InteractionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.88, -0.5 )
shape = SubResource( 3 )

[node name="AreaOfInterest" type="Area" parent="."]
collision_layer = 0
collision_mask = 30
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="AreaOfInterest"]
shape = SubResource( 4 )

[connection signal="body_entered" from="AreaOfInterest" to="." method="_on_AreaOfInterest_body_entered"]
[connection signal="body_exited" from="AreaOfInterest" to="." method="_on_AreaOfInterest_body_exited"]
